# offline-game-vault

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
.github/workflows/: validate.yml
docs/: cli-bottles-adapter.md  cli-ingest-object.md  cli-materialize.md  cli-plan.md  cli-playable.md  cli-state-management.md  cli-store-profile.md  cli-verify-object.md  generated-file-hygiene.md  validation.md
docs/adr/: 0001-core-principles.md  0002-composite-legacy-bottle-archives.md  0003-python-stdlib-orchestrator.md  0004-object-verification-before-materialization.md  0005-content-addressed-ingestion.md  0006-generated-files-are-ci-failure.md  0007-profile-store-and-deterministic-inventory.md  (+5 more)
schemas/: acceptance.schema.json  bottles-deployment-receipt.schema.json  capsule.schema.json  host-contract.schema.json  play-receipt.schema.json  playable-materialization-receipt.schema.json  receipt.schema.json  state-backup.schema.json  state-export.schema.json  state-restore-receipt.schema.json  vault-inventory.schema.json
tests/: test_bottles_adapter.py  test_bottles_adapter_cli.py  test_ingest_object.py  test_ingest_object_cli.py  test_inventory.py  test_materialize_cli.py  test_materializer.py  test_object_granularity.py  test_plan.py  test_playable.py  test_playable_cli.py  test_profile_store.py  test_repository_fixtures.py  test_repository_hygiene.py  test_safe_tar.py  test_state_cli.py  test_state_manager.py  test_store_profile_cli.py  test_verify_object.py  test_verify_object_cli.py
tools/: check_repository_hygiene.py  validate_repository.py
(+35 files in other folders)
