[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "offline-game-vault"
version = "0.3.0"
description = "Offline, reproducible vault orchestration for preserved Windows games."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "offline-game-vault contributors" }
]
dependencies = []

[project.scripts]
ogv = "offline_game_vault.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
